Added Question Main page

--- a/src/app/ask-question/ask-question.component.html
+++ b/src/app/ask-question/ask-question.component.html
@@ -44,7 +44,7 @@
             
                 <label class="labels" style="margin-left: 20px;">Tags</label>
                 <br>
-                <a href="..." class="label label-purple clickable" style="margin-left: 20px;">
+                <a href="#" class="label label-purple clickable" style="margin-left: 20px;">
                    Angular
                 </a>
                 <a href="..." class="label label-blue clickable"style="margin-left: 20px;">
