--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,1 +1,32 @@
-<p>about-us works!</p>
+<!-- <div class="aboutus">
+    <p>welcome to the coolest platform to discuss and share you idea!</p>
+</div> -->
+<div class="main-container">
+    <div class="content-container">
+        <nav class="sidenav">
+            <section class="sidenav-content">
+                <a href="/main" class="nav-link active">
+                   Main
+                </a>
+                <a href="tags" class="nav-link">
+                    Tags
+                </a>
+                <a href="/users" class="nav-link">
+                    Users
+                </a>
+                <a href="/leaderboard" class="nav-link">
+                   Leaderboard
+                </a>
+                <a routerLink="/aboutus" class="nav-link">
+                   About Us
+                 </a>
+            </section>
+        </nav>
+        <div class="content-area">
+            <div class="aboutus">
+            <p>welcome to the coolest platform to discuss and share you idea!</p>
+            </div>
+        </div>
+    </div>
+
+</div>
