--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -20,7 +20,8 @@
             </section>
         </nav>
         <div class="content-area">
-            <h1>Questions</h1>
+            <h1>View the leaderboard here!
+            </h1>
             <br>
             
         </div>
