--- a/src/app/questions-page/questions-page.component.html
+++ b/src/app/questions-page/questions-page.component.html
@@ -5,13 +5,13 @@
                 <a href="..." class="nav-link active">
                    Main
                 </a>
-                <a href="..." class="nav-link">
+                <a href="/tags" class="nav-link">
                     Tags
                 </a>
-                <a href="..." class="nav-link">
+                <a href="/users" class="nav-link">
                     Users
                 </a>
-                <a href="..." class="nav-link">
+                <a routerLink="/leaderboard" class="nav-link">
                    Leaderboard
                 </a>
                 <a routerLink="/aboutus" class="nav-link">
